# MemoryAI

./: .env.example  .gitignore  LICENSE  QWEN.md  README.md  SETUP.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.yml  presentation-content.md  presentation.html  start-local.bat
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  database.py  main.py  run.py  settings.py
backend/app/data/: init.sql
backend/app/models/: __init__.py  card_progress.py  deck.py  flashcard.py  user.py
backend/app/routers/: auth.py  chat.py  decks.py  flashcards.py  generation.py  study.py
backend/app/services/: ai_service.py  auth_service.py  file_service.py
backend/tests/: __init__.py
client-web-react/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client-web-react/src/: App.css  App.tsx  index.css
client-web-react/src/components/: AIChatSidebar.tsx  FlashcardDisplay.tsx  GenerationForm.tsx  HeaderBar.tsx  SummaryDisplay.tsx
client-web-react/src/config/: api.ts
client-web-react/src/context/: AuthContext.tsx
client-web-react/src/pages/: AIAssistantPage.tsx  DeckDetailPage.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx  MyDecksPage.tsx  RegisterPage.tsx  SettingsPage.tsx
scripts/: init_db.py  run-backend.sh  run-frontend.sh  setup.bat  setup.sh
