[project]
name = "memoryai-backend"
version = "0.1.0"
description = "MemoryAI Backend API - AI Flashcard Generator"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.128.7",
  "uvicorn[standard]==0.40.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "sqlmodel>=0.0.22",
  "asyncpg>=0.30.0",
  "httpx==0.28.1",
  "openai>=1.0.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.6",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "aiosqlite>=0.21.0",
  "greenlet>=3.2.0",
]
