[project]
name = "memoryai-backend"
version = "0.1.0"
description = "MemoryAI Backend API - AI Flashcard Generator"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.104.1",
  "uvicorn[standard]==0.24.0",
  "pydantic==2.5.0",
  "pydantic-settings==2.1.0",
  "sqlmodel>=0.0.14",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "httpx==0.25.2",
  "openai>=1.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.6",
  "python-docx>=1.1.0",
  "pypdf>=3.17.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "aiosqlite>=0.21.0",
  "greenlet>=3.2.0",
]
